--- a/TradingPlatform/SJT/src/app/app.component.html
+++ b/TradingPlatform/SJT/src/app/app.component.html
@@ -1,7 +1,11 @@
 <app-menu></app-menu>
 
-<div class="container">
-    <router-outlet></router-outlet>
-</div>
+
+    
+
+
+<app-stock-list></app-stock-list>
+
+<router-outlet></router-outlet>
 
 <app-footer></app-footer>
