login + stock platform

--- a/TradingPlatform/SJT/src/app/app.component.html
+++ b/TradingPlatform/SJT/src/app/app.component.html
@@ -1,11 +1,8 @@
 <app-menu></app-menu>
 
-
-    
-
-
-<app-stock-list></app-stock-list>
-
+<!-- <app-stock-list></app-stock-list> -->
+<div>
 <router-outlet></router-outlet>
+</div>
 
 <app-footer></app-footer>
