--- a/TradingPlatform/SJT/src/app/menu/menu.component.html
+++ b/TradingPlatform/SJT/src/app/menu/menu.component.html
@@ -2,7 +2,7 @@
   <nav>
       <div><a href="https://www.portfolio.hu/" class="navbar-brand">
           JST Trading Platform</a>
-          <button>Logut</button>
+          <button (click)=handleLogout()>Logut</button>
         </div>
 
       
