--- a/TradingPlatform/SJT/src/app/menu/menu.component.html
+++ b/TradingPlatform/SJT/src/app/menu/menu.component.html
@@ -1,8 +1,8 @@
-<header>
+<header class= "header">
   <nav>
       <div><a href="https://www.portfolio.hu/" class="navbar-brand">
           JST Trading Platform</a>
-          <button (click)=handleLogout()>Logut</button>
+          <button (click)=handleLogout() class="btn">Logut</button>
         </div>
 
       
