--- a/TradingPlatform/SJT/src/app/stock-list/stock-list.component.html
+++ b/TradingPlatform/SJT/src/app/stock-list/stock-list.component.html
@@ -1,6 +1,6 @@
-<h6>Stock List</h6>
 
-<div *ngFor="let stock of stocks">
+
+<div class = "stocks" *ngFor="let stock of stocks">
   <div>Symbol: {{stock.symbol}}</div>
   <div>&emsp;Open: {{stock.open}}</div>
   <div>&emsp;Highest: {{stock.high}}</div>
