--- a/TradingPlatform/SJT/src/app/footer/footer.component.html
+++ b/TradingPlatform/SJT/src/app/footer/footer.component.html
@@ -1,6 +1,6 @@
 <footer class="footer">
-  <div class="container">
-      <span class="text-muted">All Rights Reserved 2019 JST Trading Company</span>
+  <div>
+      <span class="text-muted">All Rights Reserved 2019 JST Trading Company &copy;</span>
   </div>
 
 </footer>
