--- a/TradingPlatform/SJT/src/app/stock-list/stock-list.component.html
+++ b/TradingPlatform/SJT/src/app/stock-list/stock-list.component.html
@@ -1,5 +1,8 @@
 
-<table class = "stocks" *ngFor="let stock of stocks">
+<body>
+  
+<table class = "stocks" >
+  <thead>
   <tr>
     <th>Symbol</th>
     <th>Open</th>
@@ -10,7 +13,9 @@
     <th>Change</th>
     <th>Change Percentage</th>
   </tr>
-  <tr>
+</thead>
+<tbody>
+  <tr *ngFor="let stock of stocks">
     <td>{{stock.symbol}}</td>
     <td>{{stock.open}}</td>
     <td>{{stock.high}}</td>
@@ -20,7 +25,9 @@
     <td>{{stock.change}}</td>
     <td>{{stock.changePercent}}</td>
   </tr>
+</tbody>
 </table>
+</body>
 
 <!-- <div class = "stocks" *ngFor="let stock of stocks">
   <div>Symbol: {{stock.symbol}}</div>
