--- a/TradingPlatform/SJT/src/app/login/login.component.css
+++ b/TradingPlatform/SJT/src/app/login/login.component.css
@@ -2,7 +2,7 @@
   font-family: 'Open Sans', sans-serif;
   background:#89bee2;
   width: 100%;
-  height: 100%;
+  height: 585px;
   margin: 0px;
   padding: 0px;
   border-top-width: 0px;
