--- a/TradingPlatform/SJT/src/app/login/login.component.html
+++ b/TradingPlatform/SJT/src/app/login/login.component.html
@@ -12,7 +12,9 @@
     Email : <input type="text" class="email" name="email" [(ngModel)] = "email">
     Password  : <input type="password" class="password" name="password" [(ngModel)] = "password">
 
-    <button (click)=handleLogin() class="btn">Sign In</button>
+    <div>{{output}}</div>
+
+    <button (click)=handleLogin2() class="btn">Sign In</button>
     <button (click)=handleRegistration() class="btn">Sign Up</button>
   
   </div>
