--- a/TradingPlatform/SJT/src/app/register/register.component.css
+++ b/TradingPlatform/SJT/src/app/register/register.component.css
@@ -2,7 +2,7 @@
   font-family: 'Open Sans', sans-serif;
   background:#89bee2;
   width: 100%;
-  height: 100%;
+  height: 585px;
   margin: 0px;
   padding: 0px;
   border-top-width: 0px;
@@ -15,6 +15,7 @@
 .message {
   text-align: center;
   color:#525252;
+  background:#89bee2;
 }
 
 h1{
