--- a/TradingPlatform/SJT/src/app/login/login.component.html
+++ b/TradingPlatform/SJT/src/app/login/login.component.html
@@ -9,13 +9,13 @@
   <div class="alert alert-warning" *ngIf='invalidLogin'>{{errorMessage}}</div>
 
   <div>
-    Email : <input type="text" class="email" name="email" [(ngModel)] = "email">
-    Password  : <input type="password" class="password" name="password" [(ngModel)] = "password">
+    Email: <input type="text" class="email" name="email" [(ngModel)] = "email">
+    Password: <input type="password" class="password" name="password" [(ngModel)] = "password">
 
     <div>{{output}}</div>
 
-    <button (click)=handleLogin2() class="btn">Sign In</button>
-    <button (click)=handleRegistration() class="btn">Sign Up</button>
+    <button (click)=handleLogin() class="btn">Sign In</button>
+    <button routerLink="/register" class="btn">Sign Up</button>
   
   </div>
 </div>
