--- a/TradingPlatform/SJT/src/app/menu/menu.component.html
+++ b/TradingPlatform/SJT/src/app/menu/menu.component.html
@@ -3,8 +3,7 @@
       <div><a href="https://www.portfolio.hu/" class="navbar-brand">
           JST Trading Platform</a>
           <button (click)=handleLogout() class="btn">Logut</button>
-        </div>
-
-      
+          <button  routerLink="/profile" class="btn">Profile</button>
+        </div>      
   </nav>
 </header>
