--- a/TradingPlatform/SJT/src/app/profile/profile.component.html
+++ b/TradingPlatform/SJT/src/app/profile/profile.component.html
@@ -18,9 +18,7 @@
 
     <h5>Push the delete button to delete your registration!</h5>
 
-    <button (click)=handleProfile() class="btn2">Delete</button>
+    <button (click)=deleteProfile() class="btn2">Delete</button>
 
-
-  
   </div>
 </body>
