--- a/TradingPlatform/SJT/src/app/menu/menu.component.html
+++ b/TradingPlatform/SJT/src/app/menu/menu.component.html
@@ -2,7 +2,7 @@
   <nav>
       <div><a href="https://www.portfolio.hu/" class="navbar-brand">
           JST Trading Platform</a>
-          <button (click)=handleLogout() class="btn">Logut</button>
+          <button routerLink="/login" class="btn">Logut</button>
           <button  routerLink="/profile" class="btn">Profile</button>
         </div>      
   </nav>
