--- a/TradingPlatform/SJT/src/app/stock-list/stock-list.component.css
+++ b/TradingPlatform/SJT/src/app/stock-list/stock-list.component.css
@@ -16,3 +16,37 @@ body {
   text-align: center;
 
 }
+
+.btn{
+  background:#2ecc71;
+  width:125px;
+  padding-top:5px;
+  padding-bottom:5px;
+  color:white;
+  border-radius:4px;
+  border: #27ae60 1px solid;
+  
+  margin-top:40px;
+  margin-bottom:20px;
+  float:left;
+  margin-left:15px;
+  font-weight:800;
+  font-size:0.8em;
+}
+
+.btn:hover{
+  background:#2CC06B; 
+}
+
+div {
+  font-size: 1em;
+  margin: 50px;
+}
+
+a {
+  color:#525252
+}
+
+a:hover {
+  color: blue
+}
