developed table content

--- a/TradingPlatform/SJT/src/app/register/register.component.css
+++ b/TradingPlatform/SJT/src/app/register/register.component.css
@@ -4,7 +4,7 @@
   width: 100%;
   height: 585px;
   margin: 0px;
-  padding: 0px;
+  padding-top: 30px;
   border-top-width: 0px;
   border-right-width: 0px;
   border-bottom-width: 0px;
