--- a/TradingPlatform/SJT/src/app/login/login.component.css
+++ b/TradingPlatform/SJT/src/app/login/login.component.css
@@ -2,9 +2,9 @@
   font-family: 'Open Sans', sans-serif;
   background:#89bee2;
   width: 100%;
-  height: 585px;
+  height: 540px;
   margin: 0px;
-  padding: 0px;
+  padding-top: 30px;
   border-top-width: 0px;
   border-right-width: 0px;
   border-bottom-width: 0px;
@@ -35,7 +35,6 @@ h1{
   padding: 8px;
   width:250px;
   color:#AAAAAA;
-  margin-top:10px;
   font-size:1em;
   border-radius:4px;
 }
