--- a/TradingPlatform/SJT/src/app/login/login.component.html
+++ b/TradingPlatform/SJT/src/app/login/login.component.html
@@ -6,14 +6,17 @@
 
   <h1>Sign In</h1>
 
-  <div class="alert alert-warning" *ngIf='invalidLogin'>{{result[0]}}</div>
+  <div class="alert alert-warning" *ngIf='invalidLogin'>{{output | json}}</div>
 
   <div>
-    Email: <input type="text" class="email" name="email" [(ngModel)] = "email">
-    Password: <input type="password" class="password" name="password" [(ngModel)] = "password">
+    Email: <input type="text" class="email" name="email" [(ngModel)] = "user.email">
+    Password: <input type="password" class="password" name="password" [(ngModel)] = "user.password">
 
-    <button (click)=handleLogin() class="btn">Sign In</button>
-    <button routerLink="/register" class="btn">Sign Up</button>
+    <button  (click)=handleLogin2() class="btn">Sign In</button>
+    <button mat-menu-item routerLink="/register" class="btn">Sign Up</button>
+
+
+   <h2>{{output | json}}</h2>  
   
   </div>
 </div>
