--- a/TradingPlatform/SJT/src/app/menu/menu.component.html
+++ b/TradingPlatform/SJT/src/app/menu/menu.component.html
@@ -1,9 +1,9 @@
 <header class= "header">
-  <nav>
+  <nav mat-menu>
       <div><a href="https://www.portfolio.hu/" class="navbar-brand">
           JST Trading Platform</a>
-          <button routerLink="/login" class="btn">Logut</button>
-          <button  routerLink="/profile" class="btn">Profile</button>
+          <button mat-flat-button routerLink="/login" class="btn">Logut</button>
+          <button  mat-flat-button routerLink="/profile" class="btn">Profile</button>
         </div>      
   </nav>
 </header>
