--- a/TradingPlatform/SJT/src/app/stock-list/stock-list.component.css
+++ b/TradingPlatform/SJT/src/app/stock-list/stock-list.component.css
@@ -2,19 +2,14 @@
 body {
   padding-top: 25px;
   width: 100%;
-  height: 585px;
+  height: 880px;
   background:#89bee2;
 }
 
-.stocks {
-  background:#89bee2;
-  width: 100%;
-  height: 100px;
-  margin: 0px;
-  padding: 100px;
-  padding-top: 100px;
-  text-align: center;
-
+table{
+  width: 95%;
+  color: white;
+  margin: 20px auto;
 }
 
 .btn{
@@ -31,16 +26,19 @@ body {
   float:left;
   margin-left:15px;
   font-weight:800;
-  font-size:0.8em;
 }
 
 .btn:hover{
   background:#2CC06B; 
-}
+} 
 
 div {
-  font-size: 1em;
-  margin: 50px;
+  font-size: 1.5em;
+  padding-left: 50px;
+}
+
+.delete{
+  padding-left: 50px
 }
 
 a {
