--- a/TradingPlatform/SJT/src/app/app.component.html
+++ b/TradingPlatform/SJT/src/app/app.component.html
@@ -1,5 +1,12 @@
 
-<app-menu></app-menu>
+<mat-toolbar color="warm" class="navbar">
+  <div routerLink="/stocks">
+    JST Trading Platform</div>
+    <div class="buttons">
+    <span routerLink="/profile">Profile</span>
+    <span routerLink="/login">Logut</span>
+    </div>
+</mat-toolbar>
 
 <div>
 <router-outlet></router-outlet>
