--- a/TradingPlatform/SJT/src/app/login/login.component.css
+++ b/TradingPlatform/SJT/src/app/login/login.component.css
@@ -1,8 +1,8 @@
 .body{
   font-family: 'Open Sans', sans-serif;
-  background:#89bee2;
+  background: rgb(128, 231, 231);
   width: 100%;
-  height: 540px;
+  height: 520px;
   margin: 0px;
   padding-top: 30px;
   border-top-width: 0px;
@@ -22,9 +22,9 @@ h1{
   width:300px;
   height: 100 px;
   border-radius:6px;
-  margin: auto auto auto auto;
+  margin: auto auto;
   padding:0px 0px 70px 0px;
-  border: #2980b9 4px solid; 
+  border: #080b0e 4px solid; 
 }
 
 .email{
@@ -49,14 +49,12 @@ h1{
   font-size:1em;
 }
 
-.btn{
-  background:#2ecc71;
+  .btn{
   width:125px;
   padding-top:5px;
   padding-bottom:5px;
   color:white;
-  border-radius:4px;
-  border: #27ae60 1px solid;
+
   
   margin-top:20px;
   margin-bottom:20px;
@@ -66,6 +64,11 @@ h1{
   font-size:0.8em;
 }
 
-.btn:hover{
-  background:#2CC06B; 
+.spinner{
+  margin: 0 auto;
 }
+
+
+/*.btn:hover{
+  background:#2CC06B; 
+} */
