--- a/TradingPlatform/SJT/src/app/profile/profile.component.css
+++ b/TradingPlatform/SJT/src/app/profile/profile.component.css
@@ -1,8 +1,16 @@
 body {
   padding-top: 25px;
   width: 100%;
-  height: 585px;
-  background:#89bee2;
+  height: 525px;
+  background: rgb(128, 231, 231);
+}
+
+mat-form-field.mat-form-field{
+  margin-left: 50px
+}
+
+.btn{
+  margin-left: 100px
 }
 
 .email{
@@ -11,7 +19,8 @@ body {
 
 h5{
   color:#525252;
-  margin-left: 50px
+  margin-left: 50px;
+  font-size: 15px
 }
 
 ol {
@@ -22,25 +31,18 @@ ol {
 
 
 .btn{
-  background:#2ecc71;
   width:125px;
   padding-top:5px;
   padding-bottom:5px;
   color:white;
   border-radius:4px;
-  border: #27ae60 1px solid;
   
-  margin-top:40px;
-  margin-bottom:20px;
   float:left;
-  margin-left:15px;
+  margin-left:50px;
   font-weight:800;
   font-size:0.8em;
 }
 
-.btn:hover{
-  background:#2CC06B; 
-}
 
 .btn2{
   background:#2ecc71;
