--- a/TradingPlatform/SJT/src/app/register/register.component.css
+++ b/TradingPlatform/SJT/src/app/register/register.component.css
@@ -1,6 +1,6 @@
 .body{
   font-family: 'Open Sans', sans-serif;
-  background:#89bee2;
+  background: rgb(128, 231, 231);
   width: 100%;
   height: 585px;
   margin: 0px;
@@ -57,13 +57,11 @@ h1{
 }
 
 .btn{
-  background:#2ecc71;
   width:125px;
   padding-top:5px;
   padding-bottom:5px;
   color:white;
   border-radius:4px;
-  border: #27ae60 1px solid;
   
   margin-top:20px;
   margin-bottom:20px;
@@ -71,8 +69,4 @@ h1{
   margin-left:16px;
   font-weight:800;
   font-size:0.8em;
-}
-
-.btn:hover{
-  background:#2CC06B; 
 }
