--- a/TradingPlatform/SJT/src/app/stock-list/stock-list.component.css
+++ b/TradingPlatform/SJT/src/app/stock-list/stock-list.component.css
@@ -2,38 +2,51 @@
 body {
   padding-top: 25px;
   width: 100%;
-  height: 880px;
-  background:#89bee2;
+  height: 66rem;
+  background: rgb(128, 231, 231);
+}
+
+mat-form-field.mat-form-field {
+  font-size: 20px;
+  margin: 0 0 0 0 
+}
+
+mat-button.mat-button{
+  font-size: 15px
 }
 
 table{
   width: 95%;
   color: white;
   margin: 20px auto;
+  padding: 0 auto;
+  text-align: center !important;
+}
+
+.mat-header-cell {
+  text-align: center;
+}
+
+h6{
+  font-size: 15px
 }
 
 .btn{
-  background:#2ecc71;
   width:125px;
   padding-top:5px;
   padding-bottom:5px;
   color:white;
-  border-radius:4px;
-  border: #27ae60 1px solid;
-  
-  margin-top:40px;
-  margin-bottom:20px;
+
+
   float:left;
-  margin-left:15px;
+  margin-left:16px;
   font-weight:800;
+  font-size:0.8em;
 }
 
-.btn:hover{
-  background:#2CC06B; 
-} 
 
 div {
-  font-size: 1.5em;
+  font-size: 1em;
   padding-left: 50px;
 }
 
@@ -47,4 +60,8 @@ a {
 
 a:hover {
   color: blue
+}
+
+mat-heder-cell, mat-cell{
+  text-align: center; 
 }
